fix show page with fixed invest also on mobile

--- a/app/assets/stylesheets/components/_card-show.scss
+++ b/app/assets/stylesheets/components/_card-show.scss
@@ -1,9 +1,24 @@
+.custom-container {
+  margin: 0 5%;
+}
+
+.show-container{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+
+  .card-projects {
+    margin: 15px 0px;
+  }
+}
+
 .wrapper-one-lightblue {
   margin-top: 30px;
+  width: 100%;
   height: 100%;
   display:flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  flex: 0 0 66%;
   h3 {
     font-size: 2rem;
     font-weight: bolder;
@@ -22,6 +37,16 @@
 
   i {
     width: 40px;
+  }
+}
+
+.flex-two-fixed{
+  display: flex;
+  flex: 0 0 30%;
+  margin-top: 44px;
+  .show-flex-three{
+    position: fixed;
+    height: 460px;
   }
 }
 
@@ -58,12 +83,12 @@
   }
   .project-detailed-description-show{
     margin: 100px 15px 10px 15px;
-    flex: 0 0 30%;
+    flex: 0 0 100%;
     color: white;
   }
   .map-showpage {
     margin: 15px;
-    flex: 1 1 auto;
+    flex: 0 0 100%;
   }
 
   .button-begin-showpage{
@@ -81,7 +106,7 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    flex: 0 0 30%;
+    margin-left: 40px;
     color: white;
   }
 
@@ -114,15 +139,15 @@
     display: flex;
     flex-direction: column;
     color: white;
-    border: solid white 2px;
+    border: solid #004c64 2px;
     border-radius: 5px;
     text-align: center;
     padding-top: 40px;
     background: #004c64;
-    box-shadow: inset 0 1px 13px 0 rgba(0, 0, 0, 0.53);
-  .investment-container-form{
-  width: auto;
-  }
+    box-shadow: outset 0 1px 13px 0 rgba(0, 0, 0, 0.53);
+  // .investment-container-form{
+  // width: auto;
+  // }
   >h3 {
     font-size: 2.5rem;
     letter-spacing: 2px;
@@ -134,19 +159,20 @@
   }
 
   .show-flex-four {
-    flex: 0 0 40%;
+    flex: 0 0 100%;
     min-width: 340px;
     padding: 10px;
     color: white;
     height: auto;
     p {
       padding: 10px 30px 0 0px;
+      text-align: justify;
     }
   }
 
   .show-flex-five {
     padding: 10px;
-    flex: 1 auto;
+    flex: 0 0 100%;
     min-width: 340px;
     display: flex;
     flex-direction: column;
@@ -243,7 +269,50 @@
   opacity: 0.1;
 }
 
+@media only screen and (max-width: 425px) {
+  .investment-container-form {
+    width: 100% !important;
+    margin: 0 auto !important;
+  }
+  .wrapper-one-lightblue {
+  justify-content: center;
+  }
+}
 
+@media only screen and (min-width: 425px) and (max-width: 1024px) {
+  .investment-container-form {
+    width: 40% !important;
+    margin: 0 auto !important;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .wrapper-one-lightblue {
+    flex: 0 0 100%;
+  }
+  .flex-two-fixed {
+    display: block;
+    margin-top: 0px;
+    position: fixed;
+    width: 100vw;
+    z-index: 99;
+    bottom: 0;
+    height: 200px;
+    left: 0;
+
+    .show-flex-three{
+      width: 100%;
+      padding-top: 10px;
+      h3, #price-of-selected-panels, #available-panels {
+        display: none;
+      }
+    }
+
+    .investment-container-form {
+      margin: 0 auto !important;
+    }
+  }
+}
 
 // progress[value] {
 //   /* Reset the default appearance */
