--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,5 +1,5 @@
 .card-projects {
-    height: 440px;
+    height: 460px;
     width: 340px;
     color: #484848;
     box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.07);
