--- a/app/assets/stylesheets/pages/_investment_page.scss
+++ b/app/assets/stylesheets/pages/_investment_page.scss
@@ -57,6 +57,7 @@
   padding: 10px;
   width: 200px;
   padding: 0;
+  margin: 0 auto !important;
 
   form {
     display: flex;
